[tool.poetry]
name = "earnup-python-ach"
version = "1.0.0"
description = "ACH File Creation"
authors = ["EarnUp Engineering <engineering@earnup.com>"]
repository = "https://github.com/EarnUp/python-ach"
packages = [
  { include = "ach" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = ">=5.0.1,<6.0"
nose = ">=1.3.7,<2.0"

[[tool.poetry.source]]
name = "EarnUp Internal Nexus"
url = "https://nexus.earnup.com/repository/PyPI-All/simple"
default = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
